[Spacing / Sizing] Fixed text so that it's center aligned on very large screens.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1492,34 +1492,41 @@ p, .wysiwyg h5, .wysiwyg h6 {
   #home-map #map {
     opacity: .25; } }
 
-.wysiwyg {
-  /**
-     * This constrains the width of the wysiwyg container on larger screens.
-     */
-  max-width: 900px; }
-  .wysiwyg p, .wysiwyg h5, .wysiwyg h6 {
-    margin-bottom: 1.5em; }
-  .wysiwyg ol, .wysiwyg ul {
-    list-style: none;
-    counter-reset: section; }
-  .wysiwyg ul li {
-    margin-left: 2em;
-    margin-bottom: 1em;
-    text-indent: -2.5em; }
-    .wysiwyg ul li::before {
-      content: "…";
-      margin-left: 1em;
-      margin-right: 1em; }
-  .wysiwyg ol li {
-    margin-left: 2em;
-    margin-bottom: 1em;
-    text-indent: -2.5em; }
-    .wysiwyg ol li::before {
-      counter-increment: section;
-      content: counter(section) ".";
-      margin-left: 1em;
-      margin-right: 1em;
-      font-weight: bold; }
+.wysiwyg p, .wysiwyg h5, .wysiwyg h6 {
+  margin-bottom: 1.5em; }
+
+.wysiwyg ol, .wysiwyg ul {
+  list-style: none;
+  counter-reset: section; }
+
+.wysiwyg ul li {
+  margin-left: 2em;
+  margin-bottom: 1em;
+  text-indent: -2.5em; }
+  .wysiwyg ul li::before {
+    content: "…";
+    margin-left: 1em;
+    margin-right: 1em; }
+
+.wysiwyg ol li {
+  margin-left: 2em;
+  margin-bottom: 1em;
+  text-indent: -2.5em; }
+  .wysiwyg ol li::before {
+    counter-increment: section;
+    content: counter(section) ".";
+    margin-left: 1em;
+    margin-right: 1em;
+    font-weight: bold; }
+
+@media (min-width: 1201px) {
+  .wysiwyg {
+    /**
+         * This constrains the width of the wysiwyg container on larger screens.
+         */
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto; } }
 
 figure {
   -webkit-box-sizing: border-box;
@@ -2006,8 +2013,11 @@ hr {
 /**
  * This constrains the width of the wysiwyg container on larger screens.
  */
-.project-summary, .project-title {
-  max-width: 900px; }
+@media (min-width: 1201px) {
+  .project-summary, .project-title, .project-metadata {
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto; } }
 
 .individual-hero-image {
   max-height: 400px;
@@ -2064,7 +2074,8 @@ hr {
 
 @media (max-width: 767px) {
   .header-height {
-    height: 320px; } }
+    height: 320px;
+    padding: none; } }
 
 /********** OUTPUT ********/
 .results-tile-cover-image {
