--- a/static/scss/_wysiwyg_figures.scss
+++ b/static/scss/_wysiwyg_figures.scss
@@ -1,9 +1,6 @@
 .wysiwyg {
 
-    /**
-     * This constrains the width of the wysiwyg container on larger screens.
-     */
-    max-width: 900px;
+
 
     h1,h2,h3,h4,h5 {
         @extend .bold;
@@ -68,6 +65,17 @@
         text-indent: -2.5em;
     }
 
+}
+
+@media ($lg-query) {
+    .wysiwyg {
+        /**
+         * This constrains the width of the wysiwyg container on larger screens.
+         */
+        max-width: 900px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 
